--- a/.github/workflows/on_pull_request.yml
+++ b/.github/workflows/on_pull_request.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build:
-    Name: Lint, Test and Build
+    name: Lint, Test and Build
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout
