--- a/.github/workflows/on_pull_request.yml
+++ b/.github/workflows/on_pull_request.yml
@@ -13,9 +13,17 @@ jobs:
         uses: actions/checkout@v3
       - name: Install dependencies
         run: npm ci
-      - name: Lint
-        run: npm run lint
-      - name: Test
-        run: npm run test
       - name: Build
         run: npm run build
+  
+  notify:
+    name: notify
+    runs-on: ubuntu-20.04
+    needs: [build]
+    steps:
+      - name: Post to a Slack channel
+        id: slack
+        uses: slackapi/slack-github-action@v1.18.0
+        with:
+          channel-id: C01F94JNZHD
+          slack-message: "WAZZZAAAAAAAAP!!!! ${{ github.repository }}\n ${{ github.event.pull_request.html_url }}"
