--- a/.github/workflows/on_pull_request.yml
+++ b/.github/workflows/on_pull_request.yml
@@ -27,3 +27,5 @@ jobs:
         with:
           channel-id: C01F94JNZHD
           slack-message: "WAZZZAAAAAAAAP!!!! ${{ github.repository }}\n ${{ github.event.pull_request.html_url }}"
+        env:
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
