--- a/.github/workflows/aws_deployment.yml
+++ b/.github/workflows/aws_deployment.yml
@@ -33,4 +33,18 @@ jobs:
         run: aws s3 sync build/ s3://github-actions-workshop-andrew --acl public-read
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_KEY }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  notify:
+    name: notify
+    runs-on: ubuntu-20.04
+    needs: [deploy]
+    if: ${{ always() }}
+    steps:
+      - name: Post to a Slack channel
+        id: slack
+        uses: slackapi/slack-github-action@v1.18.0
+        with:
+          channel-id: C01F94JNZHDgit 
+          slack-message: "!!!! ${{ github.repository }}\n ${{ needs.deploy.result }}"
+        env:
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
