--- a/.github/workflows/aws_deployment.yml
+++ b/.github/workflows/aws_deployment.yml
@@ -17,7 +17,7 @@ jobs:
         run: npm run test
   deploy:
     name: Build and deploy
-    runs-on: ubnuntu-20.04
+    runs-on: ubuntu-20.04
     needs: [test]
     steps:
       - name: Checkout
