--- a/.github/workflows/aws_deployment.yml
+++ b/.github/workflows/aws_deployment.yml
@@ -22,6 +22,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Install dependencies
+        run: npm ci
       - name: Build
         run: npm run build
       - name: Install AWS CLI
